# gitlern

./: main.c  readme.txt  tree.txt
demo/: BuildScript.sh  CMakeLists.txt
demo/inc/: define.h  main_api.h  oslib.h
demo/src/: example.c
doc/: converge_pay.html  ~$支付接口数据安全校验流程.docx  ~$认证流程(1)(1).doc  协议接口不明了的地方整理.txt  新接口协议.txt  终端认证流程(1)(1).doc  聚合支付接口数据安全校验流程.docx  聚合支付管理系统-后台API(外部)-v1.0.docx
lib_src/: CMakelists.txt  ShellScript.sh
lib_src/src/inc/: gmalg_inc.h  sqlite3_api.h
lib_src/src/src_api/src/: main_api.c
lib_src/src/src_db/src/: db.c
lib_src/src/src_driver/inc/: IF_UART.h
lib_src/src/src_driver/src/: IF_UART.c
lib_src/src/src_inc/: data_type.h  define.h
lib_src/src/src_msg/inc/: dc_ploymerize_pey.h  trans_msg.h
lib_src/src/src_msg/src/: dc_ploymerize_pey.c  trans_msg.c
lib_src/src/src_net/inc/: sdkCurl.h
lib_src/src/src_net/inc/curl/: typecheck-gcc.h
lib_src/src/src_net/src/: sdkCurl.c
lib_src/src/src_pub/inc/: config.h
lib_src/src/src_pub/src/: cjson.c  config.c  file.c  screen.c  sound.c  tool.c
lib_src/src/src_test/inc/: test.h
lib_src/src/src_test/src/: test.c
